# Lab-4-exercise-2

./: .gitignore  CMakeLists.txt
src/graph-plotter/: DataPoints.cpp  DataPoints.h  Display.cpp  Display.h  Graph.cpp  Graph.h  LineStyle.cpp  LineStyle.h  Points.h  Sampler.cpp  Sampler.h  Sinusoid.cpp  Sinusoid.h  SolidLineStyle.cpp  SolidLineStyle.h  main.cpp
src/payroll/: CommissionWorker.cpp  CommissionWorker.h  Employee.cpp  Employee.h  Fixed.cpp  Fixed.h  Hourly.cpp  Hourly.h  payroll-main.cpp
